asoc-86335 - fix text overlap in timerange dropdown (#6102)

--- a/component-lib/app/styles/component-lib/base/form/_rsa-date-time-input.scss
+++ b/component-lib/app/styles/component-lib/base/form/_rsa-date-time-input.scss
@@ -81,9 +81,10 @@ $datePickerSpacing: $datePickerFontSize * 0.15;
 }
 
 .timerange-selector-panel {
-  .dropdown-action-list {
+  .rsa-dropdown-action-list {
     li {
       white-space: nowrap;
+      min-width: 112px;
     }
   }
 }
