--- a/investigate-shared/app/styles/investigate-shared/components/time-selector/_manifest.scss
+++ b/investigate-shared/app/styles/investigate-shared/components/time-selector/_manifest.scss
@@ -15,5 +15,6 @@
 
 .timerange-selector-panel {
   max-height: 20rem;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden
 }
